# imu_fusion

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml  default.rviz
launch/: demo.launch
scripts/: fix_point.py  pub_path.py  save_odom.py  show_path.py
src/: imu_process.cpp
src/common/: IMU.h  Odometry.h
src/kalman_filter/: kf.cpp  kf.h
src/ros_interface/: ros_interface.cpp  ros_interface.h
